Modernize from Java 6/Gradle 1.11 to Java 17/Gradle 8.12
- Gradle: 1.11 → 8.12 (compile→implementation, testCompile→testImplementation)
- Java: 1.6 → 17 (JavaVersion.VERSION_17)
- Spring: 4.0.2.RELEASE → 6.1.16 (jakarta namespace)
- JUnit: 4.11 → 5.10.x (with vintage engine for Theories)
- Mockito: 1.9.5 → 5.14.2
- Jackson: codehaus 1.9.13 → fasterxml 2.18.2
- Jersey: 2.7 → 3.1.9 (jakarta)
- Hibernate Validator: 5.1.0 → 8.0.2 (jakarta)
- MyBatis: 3.2.5 → 3.5.17, MyBatis-Spring: 1.2.2 → 3.0.4
- H2: 1.3.173 → 2.3.232
- Servlet: 3.0.1 → Jakarta 6.0
- javax.* → jakarta.* package migration
- org.codehaus.jackson → com.fasterxml.jackson
- commons-lang → commons-lang3, commons-collections → collections4
- FindBugs → SpotBugs, license-gradle-plugin updated
- SCM URLs: ctc-g/sinavi-jfw → madmerger/sinavi-jfw
- Travis CI → GitHub Actions
- Repository URLs: HTTP → HTTPS / mavenCentral()
- Removed credentials from gradle.properties

Co-Authored-By: Akira Shibata <akira.shibata@gmail.com>